Switched to relative links

--- a/articles.html
+++ b/articles.html
@@ -48,7 +48,7 @@ update your fonts. Or just deal with it. I think those are the only options.
 <body>
   <div class="page">
     <div class="">
-      <p class="return"><a href="home.html">&lt; Exit</a></p>
+      <p class="return"><a href="/home">&lt; Exit</a></p>
 
       <p class="title">Tyler's Articles</p>
       <div class="article">
