--- a/home.html
+++ b/home.html
@@ -23,8 +23,8 @@
                 <a target="_blank" href="https://linkedin.com/in/tylerleite"><img class="icon" src="./graphics/icons/linkedin.png"/></a>
                 <a target="_blank" href="https://github.com/TylerLeite"><img class="icon" src="./graphics/icons/github.png"/></a>
                 <a target="_blank" href="https://soundcloud.com/tyler-leite"><img class="icon" src="./graphics/icons/soundcloud.png"/></a>
-                <a target="_blank" href="http://tylerleite.github.io/resume"><img class="icon" src="./graphics/icons/resume.png"/></a>
-                <a target="" href="articles.html"><img class="icon" src="./graphics/icons/articles.png"/></a>
+                <a target="_blank" href="/resume"><img class="icon" src="./graphics/icons/resume.png"/></a>
+                <a target="" href="/articles"><img class="icon" src="./graphics/icons/articles.png"/></a>
                 <!--a target="" href="games.html"><img class="icon" src="./graphics/icons/games.png"/></a-->
             </p>
             <img src="./graphics/portrait.png" class="portrait">
