--- a/examples/animating-iron-pages/transition.html
+++ b/examples/animating-iron-pages/transition.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../../css/normalize.css">
-
     <link rel="stylesheet" type="text/css" href="../../css/style.css">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
@@ -19,6 +18,12 @@
     <script>
       hljs.initHighlightingOnLoad();
     </script>
+
+    <style>
+      pre {
+        margin: 0;
+      }
+    </style>
 </head>
 <body>
 
