--- a/articles.html
+++ b/articles.html
@@ -19,7 +19,7 @@ update your fonts. Or just deal with it. I think those are the only options.
 
     <title>Articles</title>
 
-    <link rel="icon" type="image/png" href="./img/favicon.png">
+    <link rel="icon" type="image/png" href="./graphics/favicon.png">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
