--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
         <title>Tyler Leite</title>
 
-        <link rel="icon" type="image/png" href="./img/favicon.png">
+        <link rel="icon" type="image/png" href="./graphics/favicon.png">
 
         <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
