--- a/articles.html
+++ b/articles.html
@@ -82,6 +82,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       </div>
       -->
       <div class="titleWrapper">
+        <a class="imgLink" href="#animating-iron-pages"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="animating-iron-pages">Animating &lt;iron-pages&gt; in Polymer 2.0</p>
         <a href="/articles" class="linkBack">top ^</a>
       </div>
