--- a/resume.html
+++ b/resume.html
@@ -22,8 +22,8 @@
     <hr>
     <div class="body"><ul>
          <li><p>
-             TeachFX, 2017 - present<br>
-             &emsp;Full stack web development, iOS development. Polymer.js, Node.js, MongoDB, Swift.
+             TeachFX, 2017<br>
+             &emsp;Full stack web development, mobile development. Polymer.js, Node.js, MongoDB, React Native.
          </li></p>
          <li><p>
           OttoQ, 2017<br>
