fix mobile version of articles page to remove horizontal margin

--- a/articles.html
+++ b/articles.html
@@ -84,7 +84,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper">
         <a class="imgLink" href="#animating-iron-pages"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="animating-iron-pages">Animating &lt;iron-pages&gt; in Polymer 2.0</p>
-        <a href="/articles" class="linkBack">top ^</a>
+        <a href="/articles" class="linkBack">top&nbsp;^</a>
       </div>
 
       <div class="article">
