add new article

--- a/articles.html
+++ b/articles.html
@@ -57,20 +57,21 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <p class="title">Tyler's Articles</p>
       <div class="article">
         <p>
-          Below is a repository of miscellaneous knowledge, mostly related to web development. I keep it so I have a reference for various things I've had to figure out. Feel free to use any information or code presented here with or without attribution.
+          Below is whatever I happen to write and feel like posting. Sometime's it's technical, sometimes it's not. Right now it's not much of anything, but I feel like it'll be a pretty mixed bag eventually.
         </p>
 
         <h2>Contents</h2>
         <ul class="contents">
           <li><a href="#animating-iron-pages">Animating &lt;iron-pages&gt; in Polymer 2.0 - July 11, 2017</a></li>
+          <li><a href="#animating-iron-pages">Captain - August 15, 2017</a></li>
         </ul>
       </div>
 
       <hr>
 
       <!-- This is my article boilerplate. If I were running my own server, I would get articles from a database on my server. As it stands, I'm hosting this site on github pages, so my options are rather limited. In fact, the best I can really do (without a lot of extra work) is just paste all of these articles in here statically.
-
       <div class="titleWrapper">
+        <a class="imgLink" href="#insert-title-here"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="insert-title-here">INSERT TITLE HERE</p>
         <a href="articles.html" class="linkBack">top ^</a>
       </div>
@@ -81,6 +82,45 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
         </p>
       </div>
       -->
+
+      <div class="titleWrapper">
+        <a class="imgLink" href="#captain"><img class="link" src="./graphics/icons/link.png"></a>
+        <p class="title" id="captain">Captain</p>
+        <a href="articles.html" class="linkBack">top ^</a>
+      </div>
+
+      <div class="article">
+        <p>
+          Even he doesn’t know why he keeps staring out over the sea, it only hurts him. He’d never let it show, though. He puts on a good show for his men. The rocking of the ship rolls pens on his desk. It sets a dull metronome. He likes it. Quiet ticking sets a fragile backdrop. It suits his fancy. You would never think the captain a soft man, not unless you knew him. Not unless you could look in his eyes and truly see him. But there was no one around to see his face. Dirty, shaggy, wrinkled. In some ways, it’s exactly as you’d expect. He was sea-worn, heavily weathered, grimy. That’s how his men would pin him, at least. In need of repair. Maybe that’s better. More right, at least. If you knew to look, you’d see the streak. A slightly muddled blemish on his mask. Exactly one, from his right eye to the corner of his mouth. Maybe tonight it would grow. Each day it could. The ship rocked rather violently. Maybe something spilled in the kitchen. Captain thought he could hear the cook shouting something nasty. Nasty by any standards. Any other time, that might bring a smile to Captain’s face. He wasn’t in the mood though, and thought he might never be. For now it was just him and the sea. Him and the horizon. And her.
+        </p>
+
+        <p>
+          It’s a struggle to knock. She knows what’s going on in there, and the last thing she’d want to do is make him scurry to hide his emotions. This is important though. Not for the crew, not for her, no. For him. Before she musters her courage, the door is opened. Captain looks her in the eye, and she looks back. His white hair, so clean and cared for. Most people would think it odd, such a weathered old sea-dog with hair that flows like a cotton sheet. Even more curious was its contrast with his beard. All gray and matted, more knotty than you’d think a lifetime of neglect could result in. More dirty than you’d think possible for a man who spends so much time away from dirt. It was strange, you could see the sharp outline of his jaw even through his thick coat, even through his years of age and stress. He was a beautiful man once. Some might say he still is, but in a different way. A deep man, with many lifetimes lived. His eyes did no work to betray his structure. Dark and violent as the storms that make him feel at home on the sea. Only a handful of people could see through it, perceive the man behind those eyes.
+        </p>
+
+        <p>
+          His streak grew last tonight, he really did need this. She stepped forward, her face in his, almost touching. He could feel her trembling. Fear? In part at least. She was certainly nervous. He was too, but to be sure he would never show it. His eyes went straight to her hands. They were clasped around a roll of paper. Old and moth-bitten. Indistinct from any other forgotten clipping. But he was expecting this, had been for years. He knew exactly what was about to happen. It almost made him shudder. Perhaps if the door were still closed, he would have.
+        </p>
+
+        <p>
+          “It’s not too late.” He could hear the telltale vibrato of her stutter. This was bad, she never got this nervous. “You and I can burn this, right here. Right now. It’ll all be over. We can just forget about all this. Who’s going to find us out here?” He smiled. They both knew her words were empty. It was sweet of her to try, though.
+        </p>
+
+        <p>
+          “One day, Mal. One day, you’ll grow old and jaded. Just like your old man. You’ll know what this means to me. You’ll know why I died for this.” She already knew. He already knew she knew. At this point, no words could have meaning. They were in each other’s minds. A perfect understanding. What else could you expect from a lifetime together? These days, she was the only one he could open up to. He liked it that way though, and deep down, so did she. Mal opened her mouth, almost involuntarily. What did she even want to say? What was she even able to say? Nothing. There was no turning back at this point. No, they were past that point for a long time now. Mal turned and left. The door closes behind her.
+        </p>
+
+        <p>
+          Captain sat for a long time, gripping his roll of paper. His mind was made up, had been for years. He knew tonight was the night, but. But what? He was frightful. He often was. From day one, his gut turns at the slightest hint of danger. It kept him alert, alive. But today he no longer needed that. He calmed himself down, unraveled his scroll, and read. For the first time in his life, he refused to hold back his tears. As he read, the passages he finished were blotted away. The last memories he had of her, the only thing tying him to this world. Soon it would be gone forever. Soon. It was all over.
+        </p>
+
+        <p>
+          Mal hardly slept that night. She put it off as long as she could, but midday came and there was no longer any time to wait. It had to be now. The walk to the Captain’s quarters is the longest it’s ever been. She raises her fist, stops herself. She opens the door. Empty. Silently, she weeps. Bites her tongue. This can’t happen anymore, she thinks. And she hides her tears. And she goes out to her men.
+        </p>
+
+        <p class="storyEnd">𓏈</p>
+      </div>
+
       <div class="titleWrapper">
         <a class="imgLink" href="#animating-iron-pages"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="animating-iron-pages">Animating &lt;iron-pages&gt; in Polymer 2.0</p>
