--- a/articles.html
+++ b/articles.html
@@ -73,7 +73,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper">
         <a class="imgLink" href="#insert-title-here"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="insert-title-here">INSERT TITLE HERE</p>
-        <a href="articles.html" class="linkBack">top ^</a>
+        <a href="/articles" class="linkBack">top ^</a>
       </div>
 
       <div class="article">
@@ -86,7 +86,7 @@ Banner image is edited from a photograph by Stephen W. Oachs http://www.stepheno
       <div class="titleWrapper">
         <a class="imgLink" href="#captain"><img class="link" src="./graphics/icons/link.png"></a>
         <p class="title" id="captain">Captain</p>
-        <a href="articles.html" class="linkBack">top ^</a>
+        <a href="/articles" class="linkBack">top ^</a>
       </div>
 
       <div class="article">
